# runs

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  RunsWeightedPackage.m  readme.md
ext/gtest/: CMakeLists.txt
include/: longruns.h  partitions.h  pvalue.h  splitruns.h  squares.h  squares_approx.h
src/: CMakeLists.txt  longruns.cxx  partitions.cxx  partitions_TEST.cxx  pvalue.cxx  pvalue_TEST.cxx  splitruns.cxx  squares.cxx  squares_approx.cxx
test/: longruns_TEST.cxx  partitions_TEST.cxx  pvalue_TEST.cxx  splitruns_TEST.cxx  squares_TEST.cxx  squares_approx_TEST.cxx
